front/fix(tab): remove horizontal padding on mobile for content wrapper

--- a/front/src/shared/ui/Tab/Tab.module.css
+++ b/front/src/shared/ui/Tab/Tab.module.css
@@ -1,7 +1,7 @@
 @reference "../../../app/styles/tailwind.css";
 
 .content {
-    @apply relative px-6 py-4 w-full col-start-1 row-start-1 -translate-x-full transition-[translate];
+    @apply relative px-0 py-2 sm:px-6 sm:py-4 w-full col-start-1 row-start-1 -translate-x-full transition-[translate];
 }
 
 .content.scrollable {
